# jala

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/jala/: __init__.py  cli.py  models.py  report.py  simulator.py
src/jala/irrigation/: scheduler.py  valves.py  zones.py
src/jala/optimizer/: forecast.py  water_budget.py
src/jala/sensors/: flow.py  moisture.py  weather.py
tests/: test_benchmark.py  test_core.py  test_flow.py  test_integration.py  test_moisture.py  test_optimizer.py  test_scheduler.py  test_simulator.py  test_valves.py  test_weather.py  test_zones.py
