[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "jala"
version = "0.1.0"
description = "Smart irrigation system using Penman-Monteith ET0 for optimal water scheduling"
authors = [
    { name = "Mukunda Katta" },
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
jala = "jala.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
